--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
 	],
 	"require": {
 		"php": ">=5.4.16",
-		"squizlabs/php_codesniffer": "^3.0"
+		"squizlabs/php_codesniffer": "^3.0",
+		"spryker/code-sniffer": "^0.10.0"
 	},
 	"autoload": {
 		"psr-4": {
